# simplelogin-relay

./: Cargo.toml  Makefile
src/: api.rs  lib.rs  mailer.rs  main.rs  settings.rs  types.rs
src/snapshots/: simplelogin_relay__tests__sends_mail.snap  simplelogin_relay__tests__sends_mail_with_multiple_recipients.snap  simplelogin_relay__tests__sends_mail_with_multiple_recipients_in_headers.snap  simplelogin_relay__tests__snapshot_mails-2.snap  simplelogin_relay__tests__snapshot_mails-3.snap  simplelogin_relay__tests__snapshot_mails.snap
