[package]
name = "simplelogin-relay"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
config = { version = "0.14.0", features = ["yaml"] }
lettre = { version = "0.11.4", features = ["tracing"] }
mailin-embedded = "0.8.2"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ureq = "2.9.6"

[dev-dependencies]
insta = "1.39.0"
